--- a/README
+++ b/README
@@ -5,8 +5,8 @@ to include in it are 2fa keys and password manager master keys.
 
 Lifecrypt supports two operations on this data:
 
-`lifecrypt edit` opens the stored data with vim, for editing.
-`lifecrypt view` prints the stored data to stdout.
+[lifecrypt edit] opens the stored data with vim, for editing.
+[lifecrypt view] prints the stored data to stdout.
 
 Key-derivation is provided by scrypt. Encryption and authentication is provided
 ChaCha20Poly1305.
